--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-web-uts-",
+  "name": "app-web-uts",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://bagasnur.github.io/UTS_Web3",
